# Vulkan

./: .clang-tidy  .gitattributes  .gitignore  CMakeLists.txt  LICENSE  README.md  build.py  build.sh  clean_and_recompile.sh  clean_and_run.sh  compile_and_run.sh  requirements.txt  run_static_analyzer.sh  setup.sh
Screencaps/Screen Recordings/: 2024-09-11 05-23-10.mov  Screen Recording 2024-09-09 at 07.13.26.mov
include/: Constants.h  Settings.h  Util.h  engine.h  fontsRenderer.h  game.h  transform.h  util.h
include/engine/: engine.h  mesh.h  model.h  vertex.h
scripts/: compile_shaders.sh  dependency_data.json  download_assets.sh  download_dependencies.py  download_dependencies.sh  generate_shapes.py  run_static_analyzer.sh
shaders/: shader.frag  shader.vert  shader_fancy.vert  shader_font.frag  shader_font.vert  shader_fractal.frag  shader_nicole.frag  shader_nicole.vert  shader_normal.frag  shader_normal.vert  shader_normal_rbg_colors.frag  shader_normal_view.frag  shader_normal_view.vert  shader_phong.frag  shader_phong.vert  shader_phong_stages.frag  shader_phong_stages.vert  shader_triangle_view.frag
src/: VulkanEngine.cpp  VulkanEngine.h  code.cpp  diff.cpp  engine.cpp  game.cpp  main.cpp  mesh.cpp  model.cpp  transform.cpp  util.cpp
util/: atlas_buffer_viewer.py  binary_visualizer.py  compile_shaders.sh  framebuffer_converter.py  generate_many_spheres.py  generate_shapes.py  generate_sphere.py  serialize_project.py
